syntax = "proto3";

message Zigbee_t {
  SwZb_t sw =1; 
  bool sync =2;
} 

message SwZb_t {
  uint64 deviceID=1; 
  uint32 endpoint=2;
  bool status = 3;
}